Another styling and customized filters

--- a/core/templates/core/password_reset.html
+++ b/core/templates/core/password_reset.html
@@ -1,18 +1,40 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
-    <h2>Reset Password</h2>
-
-    <div>
-        <form action="" method="POST">
-            {% csrf_token %}
-
-            {{form.as_p}}
-
-            <input type="submit" value="Reset Password">
-        </form>
+  <main class="main-content">
+    <div class="page-header align-items-start mt-0 pb-11 m-3 border-radius-lg">
     </div>
-
-{% endblock content %}
-
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+        <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+          <div class="card z-index-0">
+            <div class="card-header text-center pt-4">
+              <h5>Reset Password</h5>
+              <h6>LOGO</h6>
+            </div>
+            
+            <div class="card-body">
+              <form role="form" method="POST">
+                {% csrf_token %}
+                
+                <div class="form-floating mb-3">
+                    <input type="email" name="email" class="form-control" id="floatingInputDisabled" placeholder="Email" required>
+                    <label for="floatingInputDisabled">Email</label>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Request Password Rest</button>
+                </div>
+                <p class="text-sm mt-3 mb-0">Have account? <a href="{% url 'signin' %}" class="text-dark font-weight-bolder">Login</a></p>
+                <p class="text-sm mt-3 mb-0">Don't have an account? <a href="{% url 'signup' %}" class="text-dark font-weight-bolder">Sign Up</a></p>
+              </form>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+ 
+  {% endblock content %}
