--- a/core/templates/core/password_reset_complete.html
+++ b/core/templates/core/password_reset_complete.html
@@ -1,7 +1,33 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+<main class="main-content position-relative border-radius-lg ">
+    <!-- alert feed -->
+    <div class="align-items-start min-vh-25 mb-4 border-radius-lg">
+    </div>
+    <div class="container-fluid py-4">
+        <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+            <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+                <div class="card z-index-0">
 
-    <h2>Your password is reset successfully you can login now!</h2>
-    <a href="{% url 'signin' %}">Login Here</a>
+                    <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                        <div class="circle bg-gradient-success">
+                            <span class="number text-dark"><i class="ni ni-check-bold"></i></span>
+                        </div>
+                        <small>Your password is reset successfully you can login now!</small>
+                    </div>
+                    <div class="card-body m-0">
+                        <div class="text-center">
+                            <a href="{% url 'signin' %}" class="btn bg-gradient-dark w-100 mb-2">Login</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- alert feed end -->
+</main>
 {% endblock content %}
