--- a/core/templates/core/password_reset_done.html
+++ b/core/templates/core/password_reset_done.html
@@ -1,5 +1,28 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-    <h3>Instruction sent to email to rest your password</h3>
+    <main class="main-content position-relative border-radius-lg ">
+        <!-- alert feed -->
+        <div class="align-items-start min-vh-25 mb-4 border-radius-lg">
+        </div>
+        <div class="container-fluid py-4">
+            <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+                <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+                    <div class="card z-index-0">
+    
+                        <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                            <div class="circle bg-gradient-success">
+                                <span class="number text-dark"><i class="ni ni-check-bold"></i></span>
+                            </div>
+                            <small>An email was sent to you to reset your email</small>
+                        </div>
+    
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <!-- alert feed end -->
+    </main>
 {% endblock content %}
