--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -139,26 +139,34 @@
   </aside>
   <main class="main-content position-relative border-radius-lg ">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur" data-scroll="false">
+    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
+      data-scroll="false">
       <div class="container-fluid py-1 px-3">
-        <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
-          <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-            <div class="input-group">
-              <form action="{% url 'search' %}" method="GET">
-                {% csrf_token %}
-          
-                <div class="input-group mb-3">
-                  <span class="input-group-text" id="basic-addon1">
-                    <i class="fas fa-search" aria-hidden="true"></i>
-                  </span>
-                  <input type="text" name="user" class="form-control" placeholder="Search here...." required aria-label="Username"
-                    aria-describedby="basic-addon1">
-                </div>
-              </form>
+        <div class="d-flex justify-content-between align-items-center w-100">
+          <!-- Logo (Far Left) -->
+          <a class="navbar-brand" href="{{request.META.HTTP_REFERER}}">
+            <!-- <img src="your-logo.png" alt="Logos"> -->
+            <i class="ni ni-bold-left"></i>
+          </a>
+    
+          <!-- User Profile and Notification (Far Right) -->
+          <ul class="navbar-nav">
+            <div class="ms-md-auto pe-md-3 d-flex mt-3 align-items-center">
+              <div class="input-group">
+                <form action="{% url 'search' %}" method="GET">
+                  {% csrf_token %}
+    
+                  <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">
+                      <i class="fas fa-search" aria-hidden="true"></i>
+                    </span>
+                    <input type="text" name="user" class="form-control" placeholder="Search here...." required
+                      aria-label="Username" aria-describedby="basic-addon1">
+                  </div>
+                </form>
+              </div>
             </div>
-          </div>
-          <ul class="navbar-nav  justify-content-end">
-              <!-- Notification begines -->
+            <!-- Notification begins -->
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -167,7 +175,7 @@
                   <small class="text-danger fw-bolder">23</small>
                 </span>
               </a>
-
+    
               <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
                 <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="javascript:;">
@@ -191,7 +199,8 @@
                   <a class="dropdown-item border-radius-md" href="javascript:;">
                     <div class="d-flex py-1">
                       <div class="my-auto">
-                        <img src="./assets/img/small-logos/logo-spotify.svg" class="avatar avatar-sm bg-gradient-dark  me-3 ">
+                        <img src="./assets/img/small-logos/logo-spotify.svg"
+                          class="avatar avatar-sm bg-gradient-dark  me-3 ">
                       </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm text-dark font-weight-normal mb-1">
@@ -209,14 +218,19 @@
                   <a class="dropdown-item border-radius-md" href="javascript:;">
                     <div class="d-flex py-1">
                       <div class="avatar avatar-sm bg-gradient-secondary  me-3  my-auto">
-                        <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                          xmlns:xlink="http://www.w3.org/1999/xlink">
                           <title>credit-card</title>
                           <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                             <g transform="translate(-2169.000000, -745.000000)" fill="#FFFFFF" fill-rule="nonzero">
                               <g transform="translate(1716.000000, 291.000000)">
                                 <g transform="translate(453.000000, 454.000000)">
-                                  <path class="color-background" d="M43,10.7482083 L43,3.58333333 C43,1.60354167 41.3964583,0 39.4166667,0 L3.58333333,0 C1.60354167,0 0,1.60354167 0,3.58333333 L0,10.7482083 L43,10.7482083 Z" opacity="0.593633743"></path>
-                                  <path class="color-background" d="M0,16.125 L0,32.25 C0,34.2297917 1.60354167,35.8333333 3.58333333,35.8333333 L39.4166667,35.8333333 C41.3964583,35.8333333 43,34.2297917 43,32.25 L43,16.125 L0,16.125 Z M19.7083333,26.875 L7.16666667,26.875 L7.16666667,23.2916667 L19.7083333,23.2916667 L19.7083333,26.875 Z M35.8333333,26.875 L28.6666667,26.875 L28.6666667,23.2916667 L35.8333333,23.2916667 L35.8333333,26.875 Z"></path>
+                                  <path class="color-background"
+                                    d="M43,10.7482083 L43,3.58333333 C43,1.60354167 41.3964583,0 39.4166667,0 L3.58333333,0 C1.60354167,0 0,1.60354167 0,3.58333333 L0,10.7482083 L43,10.7482083 Z"
+                                    opacity="0.593633743"></path>
+                                  <path class="color-background"
+                                    d="M0,16.125 L0,32.25 C0,34.2297917 1.60354167,35.8333333 3.58333333,35.8333333 L39.4166667,35.8333333 C41.3964583,35.8333333 43,34.2297917 43,32.25 L43,16.125 L0,16.125 Z M19.7083333,26.875 L7.16666667,26.875 L7.16666667,23.2916667 L19.7083333,23.2916667 L19.7083333,26.875 Z M35.8333333,26.875 L28.6666667,26.875 L28.6666667,23.2916667 L35.8333333,23.2916667 L35.8333333,26.875 Z">
+                                  </path>
                                 </g>
                               </g>
                             </g>
@@ -237,17 +251,34 @@
                 </li>
               </ul>
             </li>
-            <!-- Notification end My own -->
+            <!-- User Profile -->
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 <img src="{{ request.user.profile.image.url }}" class="avatar avatar-sm  me-3 ">
               </a>
-
+    
               <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'home' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Home</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
                 <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="{% url 'profile' request.user.username %}">
                     <div class="d-flex py-1">
-                      <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
                       </div>
                       <div class="d-flex flex-column justify-content-center">
@@ -261,9 +292,10 @@
                 <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="{% url 'settings' %}">
                     <div class="d-flex py-1">
-                        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-settings text-success text-sm opacity-10"></i>
-                          </div>
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-settings text-success text-sm opacity-10"></i>
+                      </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm font-weight-normal mb-1">
                           <span class="font-weight-bold text-dark">Settings</span>
@@ -277,7 +309,7 @@
                     <div class="d-flex py-1">
                       <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="ni ni-key-25 text-danger text-sm opacity-10"></i>
+                        <i class="ni ni-key-25 text-success text-sm opacity-10"></i>
                       </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm font-weight-normal mb-1">
@@ -290,9 +322,10 @@
                 <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="{% url 'signout' %}">
                     <div class="d-flex py-1">
-                        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-user-run text-danger text-sm opacity-10"></i>
-                          </div>
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-user-run text-danger text-sm opacity-10"></i>
+                      </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm font-weight-normal mb-1">
                           <span class="font-weight-bold text-dark">Logout</span>
@@ -301,13 +334,13 @@
                     </div>
                   </a>
                 </li>
-                
+    
               </ul>
             </li>
-            <!-- Notification start -->
-            
+            <!-- Notification end -->
+
             <!-- Side bar toggler -->
-            <li class="nav-item d-xl-none ps-3 d-flex align-items-center text-dark ">
+            <li class="nav-item d-xl-none ps-3 d-flex align-items-center text-dark">
               <a href="javascript:;" class="nav-link text-dark p-0" id="iconNavbarSidenav">
                 <div class="sidenav-toggler-inner text-dark">
                   <i class="sidenav-toggler-line bg-gradient-dark"></i>
@@ -322,10 +355,6 @@
     </nav>
     <!-- End Navbar -->
     <span class="m-5">
-      <a href="{{prev_url}}">
-        <i class="ni ni-bold-left"></i>
-        <b>Back</b>
-      </a>
       <span>{{posts_count}} Post{{posts_count|pluralize}}</span>
     </span>
 
