--- a/core/templates/core/delete.html
+++ b/core/templates/core/delete.html
@@ -1,11 +1,41 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-    <h3>Are you sure you want to delete {{obj}}</h3>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <input type="submit" value="Confirm">
-    </form>
+<main class="main-content position-relative border-radius-lg ">
+    <!-- alert feed -->
+    <div class="align-items-start min-vh-25 mb-4 border-radius-lg">
+    </div>
+    <div class="container-fluid py-4">
+        <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+            <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+                <div class="card z-index-0">
 
-    <a href="{{request.META.HTTP_REFERER}}">Cancel</a>
+                    <div class="card-body d-flex mb-0 flex-column align-items-center justify-content-center">
+                        <div class="circle bg-gradient-success">
+                            <span class="number text-dark"><i class="ni ni-check-bold"></i></span>
+                        </div>
+                        <small>Are you sure you want to delete this message!</small>
+                    </div>
+                    <div class="card-body m-0">
+                        <div class="text-center">
+                            <form action="" method="POST">
+                                {% csrf_token %}
+                                <button class="btn btn-danger"><ion-icon name="trash-outline"></ion-icon></button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="card-body m-0">
+                        <div class="text-center">
+                            <a href="{{request.META.HTTP_REFERER}}" class="btn bg-gradient-dark w-100 mb-2">Cancel</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- alert feed end -->
+</main>
 {% endblock content %}
