--- a/core/templates/core/password_reset_confirm.html
+++ b/core/templates/core/password_reset_confirm.html
@@ -2,17 +2,36 @@
 
 {% block content %}
 
-    <h2>Set New Password</h2>
-
-    <div>
-        <form action="" method="POST">
-            {% csrf_token %}
-
-            {{form.as_p}}
-
-            <input type="submit" value="Reset Password">
-        </form>
-
-    </div>
+    <main class="main-content">
+        <div class="page-header align-items-start mt-0 pb-11 m-3 border-radius-lg">
+        </div>
+        <div class="container">
+            <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+                <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+                    <div class="card z-index-0">
+                        <div class="card-header text-center pt-4">
+                            <h5>Set New Password</h5>
+                            <h6>LOGO</h6>
+                        </div>
+    
+                        <div class="card-body">
+                            <form role="form" method="POST">
+                                {% csrf_token %}
+    
+                                <div class="form-floating mb-3">
+                                    {{form.as_p}}
+                                </div>
+                                <div class="text-center">
+                                    <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Reset Password</button>
+                                </div>
+                                
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </main>
 
 {% endblock content %}
