--- a/core/templates/core/signin.html
+++ b/core/templates/core/signin.html
@@ -1,20 +1,44 @@
 {% extends 'base.html' %}
+{% load static %}
+
 
 {% block content %}
-    <h2>Sign-In</h2>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <div>
-            <label for="">Username</label>
-            <input type="text" name="username" placeholder="Enter username" required>
-        </div>
-        <div>
-            <label for="">Password</label>
-            <input type="password" name="password" placeholder="Enter password" required>
-        </div>
 
-        <input type="submit" value="Sign In">
-        <p><a href="{% url 'password_reset' %}">Forgot Password</a></p>
-        <p>Don't have account? <a href="{% url 'signup' %}">Sign Up</a></p>
-    </form>
-{% endblock content %}
+  <main class="main-content">
+    <div class="page-header align-items-start mt-0 pb-11 m-3 border-radius-lg" >
+    </div>
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+        <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+          <div class="card z-index-0">
+            <div class="card-header text-center pt-4">
+              <h5>Signin To SocialHuB</h5>
+              <h6>LOGO</h6>
+            </div>
+            
+            <div class="card-body">
+              <form role="form" method="POST">
+                {% csrf_token %}
+                <div class="form-floating mb-3">
+                    <input type="text" name="username" class="form-control" id="floatingInputDisabled" placeholder="username" required>
+                    <label for="floatingInputDisabled">Username</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" name="password" class="form-control" id="floatingInputDisabled" placeholder="password" required>
+                    <label for="floatingInputDisabled">Password</label>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign In</button>
+                </div>
+                <p class="text-sm mt-3 mb-0">Forgot Password? <a href="{% url 'password_reset' %}" class="text-dark font-weight-bolder">Rest Password</a></p>
+                <p class="text-sm mt-3 mb-0">Don't have an account? <a href="{% url 'signup' %}" class="text-dark font-weight-bolder">Sign Up</a></p>
+              </form>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+ 
+  {% endblock content %}
