--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -1,26 +1,56 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
+{% load static %}
 
 {% block content %}
-    <h2>Sign-Up </h2>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <div>
-            <label for="">Username:</label>
-            <input type="text" name="username" placeholder="Enter username" required>
-        </div>
-        <div>
-            <label for="">Email:</label>
-            <input type="email" name="email" placeholder="Enter email address" required>
-        </div>
-        <div>
-            <label for="">Password:</label>
-            <input type="password" name="password1" placeholder="Enter password" required>
-        </div><div>
-            <label for="">Confrim Password:</label>
-            <input type="password" name="password2" placeholder="Confirm password" required>
-        </div>
 
-        <input type="submit" value="Sign up">
-        <p>Already have account <a href="{% url 'signin' %}">Login</a></p>
-    </form>
-{% endblock content %}
+  <main class="main-content">
+    <div class="page-header align-items-start mt-0 pb-11 m-3 border-radius-lg" >
+    </div>
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+        <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+          <div class="card z-index-0">
+            <div class="card-header text-center pt-4">
+              <h5>Register To SocialHuB</h5>
+              <h6>LOGO</h6>
+            </div>
+            
+            <div class="card-body">
+              <form role="form" method="POST">
+                {% csrf_token %}
+                <div class="form-floating mb-3">
+                    <input type="text" name="username" class="form-control" id="floatingInputDisabled" placeholder="username" required>
+                    <label for="floatingInputDisabled">Username</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" name="email" class="form-control" id="floatingInputDisabled" placeholder="Email" required>
+                    <label for="floatingInputDisabled">Email</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" name="password1" class="form-control" id="floatingInputDisabled" placeholder="password" required>
+                    <label for="floatingInputDisabled">Password</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" name="password2" class="form-control" id="floatingInputDisabled" placeholder="password2" required>
+                    <label for="floatingInputDisabled">Confirm Password</label>
+                </div>
+                <!-- <div class="form-check form-check-info text-start">
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
+                  <label class="form-check-label" for="flexCheckDefault">
+                    I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
+                  </label>
+                </div> -->
+                <div class="text-center">
+                  <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
+                </div>
+                <p class="text-sm mt-3 mb-0">Already have an account? <a href="{% url 'signin' %}" class="text-dark font-weight-bolder">Sign in</a></p>
+              </form>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+ 
+  {% endblock content %}
