--- a/templates/base.html
+++ b/templates/base.html
@@ -201,6 +201,10 @@ label {
     </footer>
 
     <!--   Core JS Files   -->
+    <!-- icons scripts -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <!-- End icon scripts -->
     <script src="{% static 'js/core/popper.min.js' %}"></script>
     <script src="{% static 'js/core/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/plugins/perfect-scrollbar.min.js' %}"></script>
@@ -314,6 +318,12 @@ label {
           return new bootstrap.Popover(popoverTriggerEl)
         });
     </script>
+    <script>
+      $(document).ready(function () {
+          $('[data-bs-toggle="popover"]').popover();
+        });
+    </script>
+ 
     <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
